--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
-name = "rust-http"
+name = "http"
 version = "0.0.1"
-authors = ["kashif"]
+authors = ["Kashif Malik <kashif610@gmail.com>"]
 
 
 [dependencies.url]
 git = "https://github.com/servo/rust-url"
+
+
+[lib]
+name = "http"
+path = "src/lib.rs"
